# energy-simulation

energi/etl/: pyproject.toml
energi/etl/app/: .env.template  logs.py  (+3 more)
energi/web/: .env.template  logs.py  pyproject.toml  run_dashboard.py
energi/web/calculations/: __init__.py  models.py
energi/web/calculations/data/: __init__.py
energi/web/calculations/data/consumption/: __init__.py  data.py  sample_data.csv
energi/web/calculations/data/integrations/: dataset.py
energi/web/calculations/data/nwp/: __init__.py  data.py  kdtree.py
energi/web/calculations/data/spot_prices/: __init__.py  data.py
energi/web/calculations/simulations/: __init__.py
energi/web/calculations/simulations/battery/: __init__.py  simulation.py
energi/web/calculations/simulations/hybrid/: __init__.py  simulation.py
energi/web/calculations/simulations/pv/: __init__.py  formulas.py  simulation.py
energi/web/calculations/utils/: __init__.py  conversion.py
energi/web/dashboard/pages/simulation/: __init__.py  page.py
energi/web/dashboard/pages/simulation/parameters/: __init__.py  form.py
energi/web/dashboard/pages/simulation/parameters/panels/: __init__.py  base.py  battery.py  consumption.py  pv.py
energi/web/dashboard/pages/simulation/parameters/sections/: battery.py  consumption.py  pv.py
energi/web/dashboard/pages/simulation/results/: __init__.py  visualizations.py
energi/web/dashboard/params/: __init__.py  default.py  sync.py  unpacking.py
energi/web/dashboard/plotting/: __init__.py  time_series.py
energi/web/dashboard/shell/: __init__.py  content.py  layout.py
(+18 files in other folders)
